# ConvertHeicToJpg

./: .gitignore  README.md  convert_to_jpg.py  convert_to_jpg.spec  converter.py  heic_to_jpg.py  heic_to_jpg.spec  iphone_to_jpg.spec  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: build.yml
tests/: test_convert_to_jpg.py
