[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "heic-to-jpg"
version = "1.0.0"
authors = [
    {name = "OT", email = "olof.thornell@gmail.com"},
]
description = "A command line tool to convert HEIC files to JPG format"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.7"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
keywords = ["heic", "jpg", "jpeg", "convert", "image"]
dependencies = [
    "Pillow>=8.0.0",
    "pillow-heif>=0.10.0",
]

[project.urls]
Homepage = "https://github.com/user-olof/ConvertHeicToJpg"
Repository = "https://github.com/user-olof/ConvertHeicToJpg"
Issues = "https://github.com/user-olof/ConvertHeicToJpg/issues"

[project.scripts]
heic-to-jpg = "convert_to_jpg:main"